--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url('/src/assets/font/Quicksand/Quicksand-VariableFont_wght.ttf');
+}
