--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@
   color: #cedae3;
   transform: scale(1.15);
 }
+
+.card__body .card__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
