edit css at index.css

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,23 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Quicksand';
-  src: url('/src/assets/font/Quicksand/Quicksand-VariableFont_wght.ttf');
+  font-family: "Quicksand";
+  src: url("/src/assets/font/Quicksand/Quicksand-VariableFont_wght.ttf");
+}
+
+.card__footer button:hover span {
+  color: #cedae3;
+}
+
+.card__footer button:hover i {
+  color: #cedae3;
+  transform: scale(1.15);
+}
+
+.card__body .card__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
